--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,10 +16,10 @@
     <!-- Showing the data in the browser -->
     <% if (blogs.length > 0){ %>
       <% blogs.forEach(blog => { %>
-
-        <h3 class="title"><%= blog.title %></h3>
-        <p class="snippet"><%= blog.snippet %></p>
-
+        <a class="single" href="/blogs/<%= blog._id %>">
+          <h3 class="title"><%= blog.title %></h3>
+          <p class="snippet"><%= blog.snippet %></p>
+        </a>
       <% }) %>
     <% } else { %>
       <p>There are not blogs to display...</p>
