06.Express Router & MVC

--- a/views/blogs/create.ejs
+++ b/views/blogs/create.ejs
@@ -2,12 +2,12 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <%- include('./partials/head.ejs') %>
+  <%- include('../partials/head.ejs') %>
 <body>
   <!-- PARTIALS. In ejs, using include method. Don't forget the minus
   include the nav partial -->
 
-  <%- include('./partials/nav.ejs') %>
+  <%- include('../partials/nav.ejs') %>
 
   <div class="create-blog content">
     <form action="/blogs" method="POST">
@@ -21,6 +21,6 @@
     </form>
   </div>
 
-  <%- include('./partials/footer.ejs') %>
+  <%- include('../partials/footer.ejs') %>
 </body>
 </html>
