--- a/views/blogs/details.ejs
+++ b/views/blogs/details.ejs
@@ -1,8 +1,8 @@
 <html lang="en">
-  <%- include('./partials/head.ejs') %>
+  <%- include('../partials/head.ejs') %>
 
   <body>
-    <%- include('./partials/nav.ejs') %>
+    <%- include('../partials/nav.ejs') %>
 
     <div class="details content">
       <h2><%= blog.title %></h2>
@@ -10,10 +10,12 @@
         <p><%- blog.body %></p>
       </div>
       <!-- 8. To Delete the blog -->
-      <a class="delete" data-doc="<%= blog.id_%>">Delete</a>
+      <a class="delete" data-doc="<%= blog.id_%>">
+        <img src="/trashcan.svg" alt="delete icon">
+      </a>
     </div>
 
-    <%- include('./partials/footer.ejs')%>
+    <%- include('../partials/footer.ejs')%>
   </body>
 
   <!-- 9. Vanilla JavaScript to delete the blog from the browser and not from the server -->
