--- a/views/blogs/index.ejs
+++ b/views/blogs/index.ejs
@@ -2,13 +2,13 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <%- include('./partials/head.ejs') %>
+  <%- include('../partials/head.ejs') %>
 <body>
   
   <!-- PARTIALS. In ejs, using include method. Don't forget the minus
   include the nav partial -->
 
-  <%- include('./partials/nav.ejs') %>
+  <%- include('../partials/nav.ejs') %>
 
   <div class="blogs content">
     <h2>All Blogs</h2>
@@ -27,7 +27,7 @@
 
   </div>
 
-  <%- include('./partials/footer.ejs') %>
+  <%- include('../partials/footer.ejs') %>
 
 </body>
 </html>
